--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 </head>
 <body>
 <h1>1.3 Empezando - Fundamentos de Git</h1>
+<a name=inicio> </a>
+<a href=#abajo>	Ir al final del documento</a>
+<a href=#mitad>	Ir a mitad del documento</a>
 
 <h2>Fundamentos de Git</h2>
 <p>Entonces, ¿qu&eacute;es Git en pocas palabras? Es muy importante asimilar esta secci&oacuten, porque si entiendes lo que es Git y los fundamentos de c&oacutemo funciona, probablemente te sea mucho m&aacutes f&aacutecil usar Git de manera eficaz. A medida que aprendas Git, intenta olvidar todo lo que puedas saber sobre otros <acronym title="Sistema de Control De Versiones">VCSs</acronym>?
 , como Subversion y Perforce; hacerlo te ayudar&aacute a evitar confusiones sutiles a la hora de utilizar la herramienta. Git almacena y modela la informaci&oacuten de forma muy diferente a esos otros sistemas, a pesar de que su interfaz sea bastante similar; comprender esas diferencias evitar&aacute que te confundas a la hora de usarlo.</p>
+<img src="imagenes/img1.png" />
 
 <h2>Instant&aacuteneas, no diferencias</h2>
 <p>La principal diferencia entre Git y cualquier otro VCS (Subversion y compañía incluidos) es c&oacutemo Git modela sus datos. Conceptualmente, la mayoría de los dem&aacutes sistemas almacenan la informaci&oacuten como una lista de cambios en los archivos. Estos sistemas (CVS, Subversion, Perforce, Bazaar, etc.) modelan la informaci&oacuten que almacenan como un conjunto de archivos y las modificaciones hechas sobre cada uno de ellos a lo largo del tiempo, como ilustra la Figura 1-4.</p>
-
+<img src="imagenes/img2.gif" />
 
 
 <h2>Figura 1-4. Otros sistemas tienden a almacenar los datos como cambios de cada archivo respecto a una versi&oacuten base.</h2>
 <p>Git no modela ni almacena sus datos de este modo. En cambio, Git modela sus datos m&aacutes como un conjunto de instant&aacuteneas de un mini sistema de archivos. Cada vez que confirmas un cambio, o guardas el estado de tu proyecto en Git, él b&aacutesicamente hace una foto del aspecto de todos tus archivos en ese momento, y guarda una referencia a esa instant&aacutenea. Para ser eficiente, si los archivos no se han modificado, Git no almacena el archivo de nuevo, s&oacutelo un enlace al archivo anterior idéntico que ya tiene almacenado. Git modela sus datos m&aacutes como en la Figura 1-5.</p>
+<img src="imagenes/img3.jpg" />
 
 
 
@@ -24,6 +29,7 @@
 
 <h2>Casi cualquier operaci&oacuten es local</h2>
 <p>La mayoría de las operaciones en Git s&oacutelo necesitan archivos y recursos locales para operar. Por lo general no se necesita informaci&oacuten de ningún otro ordenador de tu red. Si est&aacutes acostumbrado a un CVCS donde la mayoría de las operaciones tienen esa sobrecarga del retardo de la red, este aspecto de Git te va a hacer pensar que los dioses de la velocidad han bendecido Git con poderes sobrenaturales. Como tienes toda la historia del proyecto ahí mismo, en tu disco local, la mayoría de las operaciones parecen pr&aacutecticamente inmediatas.</p>
+<a name=mitad> </a>
 
 <p>Por ejemplo, para navegar por la historia del proyecto, Git no necesita salir al servidor para obtener la historia y mostr&aacutertela, simplemente la lee directamente de tu base de datos local. Esto significa que ves la historia del proyecto casi al instante. Si quieres ver los cambios introducidos en un archivo entre la versi&oacuten actual y la de hace un mes, Git puede buscar el archivo hace un mes y hacer un c&aacutelculo de diferencias localmente, en lugar de tener que pedirle a un servidor remoto que lo haga, u obtener una versi&oacuten antigua desde la red y hacerlo de manera local.</p>
 
@@ -63,6 +69,8 @@
 <li>Confirmas los cambios, lo que toma los archivos tal y como est&aacuten en el &aacuterea de preparaci&oacuten, y almacena esas instant&aacuteneas de manera permanente en tu directorio de Git.</li>
 <li>Si una versi&oacuten concreta de un archivo est&aacute en el directorio de Git, se considera confirmada (committed). </li>
 <li>Si ha sufrido cambios desde que se obtuvo del repositorio, pero ha sido añadida al &aacuterea de preparaci&oacuten, est&aacute preparada (staged). Y si ha sufrido cambios desde que se obtuvo del repositorio, pero no se ha preparado, est&aacute modificada (modified). En el Capítulo 2 aprender&aacutes m&aacutes acerca de estos estados, y de c&oacutemo puedes aprovecharte de ellos o saltarte toda la parte de preparaci&oacuten.</li>
+<a name=abajo> </a>
+<a href=#inicio>Ir arriba</a> 
 </ol>
 </body>
 </html>
