--- a/tabla/mitabla.html
+++ b/tabla/mitabla.html
@@ -1,37 +1,47 @@
 <html>
-<head>
-<title>Primer Parcial</title>
+<head><title>Primer parcial</title>
 </head>
 <body>
-<table border=2>
-<!-- Primera Fila-->
-<tr> 
-<td>Secciones Projecto GIT</td>
-<td>Directorio de Trabajo</td>
-<td>Working Directory</td>
-</tr>
-<!-- Segunda Fila-->
+<h1>mi tabla </h1>
+<a href="../index.html">A ver la tabla basica.</br></a><br>
+<table border=3>
+<!--Primera fila-->
 <tr>
-<td></td>
-<td>Area de Preparacion</td>
-<td>Stage Area</td>
- </tr>
- <!-- Tercera Fila-->
-<tr> 
-<td></td>
-<td>Directorio de Git</td>
-<td>Repositorio</td>
+<td rowspan=3>Secciones proyecto git</td>
+<td colspan=2>Directorio de trabajo</td>
+<!-- se borro -->
+<td colspan=3>Working directory</td>
+<!-- se borro -->
 </tr>
-<!-- Cuarta Fila-->
-<tr> 
-<td>Estados de Git</td>
+<!--segunda fila-->
+<tr>
+<!-- se borro -->
+<td colspan=2>Area de preparacion</td>
+<td colspan=2>Stage area</td>
+
+
+
 </tr>
-<!-- Quinta Fila-->
-<tr> 
-<td>Confirmado</td>
-<td>Modificado</td>
-<td>Preparado</td>
+<!--tercera fila-->
+<tr>
+<td colspan=2>Directorio de git</td>
+<td colspan=2>Repositorio</td>
+
+</tr>
+<!--cuarta fila-->
+<tr>
+<td colspan=5>Estados de Git </td>
+
+</tr>
+<!--quinta fila-->
+<tr>
+<td colspan=2>Confitmado</td>
+<td colspan=2>Modificado</td>
+<td colspan=2>Preparado</td>
+
 </tr>
 </table>
+<a name=abajo> </a>
+ <a href=#inicio>Ir arriba</a>
 </body>
 </html>
